libs/preprocessor/tests/errors/pe11_expected_function_or_value/source.hpp
#define HELLO

greeting = HELLO(world);
